feat: sfdc merge resource
